2011-08-15  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchConfigurationDelegate.java: 
	(getValgrindArgumentsArray): Add check when dealing with versioned options to omit them if they
	are the default.

2011-05-20  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindExportWizardPage.java (isValid): Add
	check for there being an array of launch files that is 0 in length.

2011-01-06  Elliott Baron  <ebaron@fedoraproject.org>

	Bug #333640
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchPlugin.java: Added 3.5, 3.6 version strings.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchConfigurationDelegate.java
	(getValgrindArgumentsArray): Added dsymutil option. 
	* src/org/eclipse/linuxtools/internal/valgrind/launch/messages.properties: Likewise. 
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindOptionsTab.java (createErrorOptions): Likewise.
	(initializeFrom): Likewise.
	(performApply): Likewise.
	(setDefaults): Likewise.

2010-08-03  Elliott Baron  <ebaron@fedoraproject.org>

	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchConfigurationDelegate.java (launch): API changes. 
	(getValgrindArgumentsArray): Likewise.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindOptionsTab.java: Version is now passed to tab.
	* src/org/eclipse/linuxtools/valgrind/launch/IValgrindLaunchDelegate.java (initializeView): New method.
	(getCommandArray): Pass version.
	* src/org/eclipse/linuxtools/valgrind/launch/IValgrindToolPage.java (setValgrindVersion): Likewise. 

2010-07-26  Elliott Baron  <ebaron@fedoraproject.org>

	* META-INF/MANIFEST.MF: Bump version to 0.7.0.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchConfigurationDelegate.java (launch): 
	(setOutputPath): Take path argument.
	(getValgrindArgumentsArray): Handle change to dynamic delegate API.